# az-copilot

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
azext_copilot/: __init__.py  dependency_container.py  setup.py
azext_copilot/domain/: __init__.py  constants.py
azext_copilot/domain/models/: __init__.py  conversation.py  message_type.py
azext_copilot/infrastructure/: __init__.py
azext_copilot/infrastructure/services/: __init__.py
azext_copilot/services/: conversation_engine.py  environment_context_service.py
extract/: main.py
infrastructure/: deploy.sh
infrastructure/bicep/: main.bicep
infrastructure/bicep/common/: cognitive_search.bicep  openai.bicep
src/: dependency_container.py  main.py
src/azext_copilot/: __init__.py  azext_metadata.json  commands.py  configuration.py  constants.py  conversation_engine.py  copilot.py  custom.py  helpers.py  version.py
src/azext_copilot/services/: authentication.py  openai.py
src/copilot/azext_copilot/: __init__.py  _constants.py  _helpers.py  configuration.py  constants.py  conversation_engine.py  copilot.py  custom.py  embedding.py  helpers.py
src/copilot/azext_copilot/services/: authentication.py  openai.py
src/copilot/cli/: commands.py
src/domain/: __init__.py  constants.py
src/domain/models/: __init__.py  conversation.py  message.py  message_role.py
src/infrastructure/: __init__.py
src/infrastructure/services/: __init__.py  azure_authentication_service.py  azure_cli_command_execution_service.py  azure_open_ai_client.py
src/services/: __init__.py  conversation_engine.py  environment_context_service.py
