[tool.poetry]
name = "copilot"
version = "0.1.0"
description = "Azure CLI Copilot"
authors = ["Ira Rainey <ira.rainey@microsoft.com>"]
readme = "README.md"
packages = [
    { include = "azext_copilot", from = "src/copilot" },
]

[tool.poetry.dependencies]
python = "^3.9"
azure-cli-core = "^2.53.0"
click = "^8.1.7"
azure-identity = "^1.14.0"
semantic-kernel = "0.3.13.dev"
asyncio = "^3.4.3"
beautifulsoup4 = "^4.0.0"
chromadb = "^0.4.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
copilot = "azext_copilot.copilot:copilot"
